fix flickering on posts

--- a/client/main.styl
+++ b/client/main.styl
@@ -36,7 +36,7 @@ body
   display: none
 
 header
-  padding: 20px
+  padding: 15px 20px
   position: fixed
   top: 0
   width: 100%
@@ -177,14 +177,12 @@ post-bg-color = #f9ee70
       cursor: default
     .delete-link, .post-permalink, .byline
       display: block
-      opacity: 1
   .post-body
     max-height: 210px
     overflow-y: auto
   .post-permalink, .delete-link, .byline
-    transition: all 0.3s ease-in
+    display: none
   .post-permalink
-    opacity: 0
     position: absolute
     text-decoration: none
     color: #000
@@ -193,7 +191,6 @@ post-bg-color = #f9ee70
     &:hover
       cursor: pointer
   .delete-link
-    opacity: 0
     position: absolute
     right: -3px
     top: -3px
@@ -203,7 +200,6 @@ post-bg-color = #f9ee70
     bottom: -10px
     position: absolute
     right: -10px
-    opacity: 0
     cite
       display: inline-block
       float: left
@@ -229,6 +225,7 @@ post-bg-color = #f9ee70
   background: rgba(0,0,0,0.5)
   &#new-post-overlay:hover
     cursor: move
+
 .new-post
   top: 50%
   left: 50%
